Remove unnecessary section tags
The DOM was littered with unnecessary `<section>` tags, wrapping things
without actually effecting the wrapped content. These tags were muddying
the page (for example, wrapping the `<header>` element and possibly
impeding screen reader accessibility). I have removed most of them,
except where they were being used for styling or part of a structure
that needed deeper refactoring (notably the EventList, ActivitiesAll,
and ActivityProfile components).

Remove unnecessary app-wrapper section

NavAvatar: Remove unnecessary section tag

Identification: Remove unnecessary section tag

Banner: Remove unnecessary section tag

Remove unnecessary section tags

--- a/src/components/Header/components/NavAvatarRightCorner/nav-avatar-right-corner.scss
+++ b/src/components/Header/components/NavAvatarRightCorner/nav-avatar-right-corner.scss
@@ -2,7 +2,7 @@
 
 @media (max-width: $break-md) {
   .right-side-container {
-    display: none !important;
+    display: none;
   }
 
   .tooltip {
